# GhostHealth-Guard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEEP_REVIEW.md  HOW_IT_WORKS.md  LICENSE  README.md  bla.md  deploy_workflow.sh  docker-compose.yml  dockerfile  docs  easy_explain.md  ghosthealth.manifest  index.html  setup.sql
.github/workflows/: binary.yml  ci.yml  linux-build-all.yml  linux-build-reusable.yml  linux-build.yml  multi-build.yml  release.yml
.github/workflows/.github/workflows/: windows-exe.yml
.jules/: bolt.md
app/: Cargo.toml
docs/: HIPPA.md  architecture.md  blockchain.md  soc2.md  zk_audit.md
ghosthealth-guard/k8s/: admission-webhook.yaml
html5up-website/: index.html
migrations/: 001_init.sql
semgrep/: phi_rules.yml
src/: Create audit_4_test.rs  admission_server.rs  anomaly.rs  api.rs  ast_scan.rs  audit.rs  audit_chain.rs  blockchain.rs  compliance.rs  db.rs  enclave.rs  fips.rs  github.rs  github_client.rs  handlers.rs  hash.rs  lib.rs  main.rs  models.rs  notarize.rs  patient_processor.rs  remediation.rs  scanner.rs  soc2.rs  vector_store.rs  wasm_runner.rs  webhook.rs  zk.rs  zk_circuit.rs
tests/: integration_api.rs  integration_audit.rs  integration_blockchain.rs  integration_flow.rs  ntegration_api.rs  property_hash.rs  test_app.sh
tests/fixtures/: sample_document.txt  sample_event.json
