[package]
name = "ghosthealth-guard"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web & Async
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }

# Security & HMAC
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
secrecy = { version = "0.8", features = ["serde"] }
jsonwebtoken = "9.0"
subtle = "2.4"

# Database & Serialization
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AI & Utilities
octocrab = { version = "0.38.0", features = ["rustls", "stream"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# AST-level & procedural macro
syn = { version = "2", features = ["full"] }
quote = "1"
walkdir = "2"

# Vector DB / ML
qdrant-client = "1.6"
linfa = "0.7"
ndarray = "0.15"
linfa-anomaly = "0.7"
ndarray = "0.15"

# PDF / SOC2 export
printpdf = "0.7"

# zk-SNARK
ark-std = "0.4"
ark-bls12-381 = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"

# Blockchain
ethers = "2"

# WASM sandbox
wasmtime = "17"

# Optional features
[features]
sgx = []
fips = []
